# ML-DETR

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py  train.py
dataset/: data.yaml
tools/: benchmark_latency.py  visualize_heatmap.py
ultralytics/: __init__.py
ultralytics/cfg/models/: README.md
ultralytics/cfg/models/ml-detr/: ml-detr-ecie-toglsr.yaml  ml-detr-ecie.yaml  ml-detr.yaml
ultralytics/cfg/models/rt-detr/: rtdetr-r18.yaml
ultralytics/data/: dataset.py
ultralytics/models/: __init__.py
ultralytics/models/yolo/: __init__.py
ultralytics/nn/: tasks.py
ultralytics/nn/modules/: block.py
